# vd-iot-dataapiservice

./: .gitignore  CONTRIBUTING.rst  Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirement.txt
app/: fastapp.py
app/config/: config.json
app/config_parser/: parser.py
app/helper/: utils.py
app/src/: getcall.py
app/src/docker/: containerinsert.py  containerselect.py  containerupdate.py
app/src/getdata/: tcomclass_master.py  tcommodel_cameragroup.py  tcommodel_classlink.py  tcommodel_config.py  (+6 more)
app/testapis/: test.py  test_container_model.py  test_model_master.py  test_usecase.py
dataapiservice/: fastapp.py
dataapiservice/config/: config.yaml  testconfig.yaml
dataapiservice/model/: camera_config_model.py  camera_group_model.py  incident_summary_time.py  incidentvideo_model.py  kafka_model.py  model_config_model.py  model_master_model.py  model_port_model.py  model_validate_model.py  notification_model.py  post_process_model.py  preprocess_model.py  schedule_model.py  usecase_model.py
dataapiservice/src/: get_boundary.py  get_cameraconfig.py  get_cameraextract.py  get_cameragroup.py  get_cameraid.py  get_classes.py  get_computation.py  get_incident_summary_details.py  get_incident_video_config.py  get_incidents.py  get_kafkatopics.py  get_kafkatopics_bycamid.py  get_model_validation.py  get_modelconfig.py  get_modelmaster.py  get_notificationconfig.py  get_online.py  get_port_details.py  get_postprocess.py  get_preprocessconfig.py  get_preprocessconfig_byid.py  get_schedulingconfig.py  get_upload.py  get_usecase.py  post_updatemodelurl.py  post_updateportmodel.py  post_updatesummary_time.py
docs/: index.md  modules.md
tests/: test_boundary.py  test_camconfig.py  test_camgroup.py  test_classes.py  test_computation.py  test_foo.py  test_incident_conf_status.py  test_incidents.py  test_incidentvideo.py  test_kafka_topic.py  test_model.py  test_model_port.py  test_model_status_update.py  test_online.py  test_postprocess.py  test_preview.py  test_schedule.py  test_update_port.py
(+7 files in other folders)
